# ferrugem

./: Cargo.toml
src/: commands.rs  event_handler.rs  main.rs
src/commands/: info.rs
