[package]
name = "ferrugem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
dotenv = "0.15.0"
sysinfo = "0.23.9"
simple-process-stats = "1.0.0"
tokio = { version = "1.17.0", features = ["full"] }
